objects/LLC_BI__Branch__c.object
<CustomObject>
    <description>The Branch Object contains information about specific branch locations of a financial institution .</description>
    <fields>
        <fullName>LLC_BI__Branch_Id__c</fullName>
        <description>This field is optional. The user manually populates this field. It represents the branch ID of the institution.</description>
        <label>Branch Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__City__c</fullName>
        <description>This field is optional and is manually populated. It specifies which City the branch is located in.</description>
        <label>City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__County__c</fullName>
        <description>Users manually populate this optional field. It specifies which county the branch is located in.</description>
        <label>County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manually populate this lookup field to define the Institution to which the branch belongs.</description>
        <inlineHelpText>Manually populate this lookup field to define the Institution to which the branch belongs.</inlineHelpText>
        <label>Institution</label>
        <referenceTo>LLC_BI__Institution__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Location__c</fullName>
        <description>This field is optional and is manually populated. It specifies the latitude and longitude of the branch location. Currently supported to 6 decimals.</description>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LLC_BI__State__c</fullName>
        <description>This field is optional and is manually populated. It specifies which state the branch is located in.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Street__c</fullName>
        <description>This field is optional and is manually populated. It specifies the physical street address the branch is located at.</description>
        <label>Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Zip_Code__c</fullName>
        <description>This field is optional and is manually populated. It specifies the zip code that the branch is located in.</description>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Branch</label>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>